# odbdesign-protobuf

./: .gitignore  README.md
.cursor/rules/: openmemory.mdc
.github/: copilot-instructions.md
.github/workflows/: generate-bindings.yml
cpp/native/: CMakeLists.txt
cpp/native/cmake/: PatchAbseil.cmake  PatchCares.cmake
cpp/native/include/odbdesign/: ProtobufApi.h
cpp/native/src/: ProtobufApi.cpp
cpp/tools/: CMakeLists.txt
scripts/: build_cpp_shared.sh  generate_protos.sh
src/dotnet/OdbDesign.Protobuf/: OdbDesign.Protobuf.csproj
